[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-sandboxes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paramiko>=4.0.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/open_sandboxes"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
  "-s",
  "-v",
  "--tb=short"
]
